@@ -133,6 +133,14 @@ public class PartitionUtils {
         Lists.newArrayList(workerStatsMap.entrySet());
 
     if (LOG.isInfoEnabled()) {
+      StringBuilder sb = new StringBuilder();
+      for (Entry<WorkerInfo, VertexEdgeCount> worker : workerEntryList) {
+        sb.append(worker.getKey());
+        sb.append(":");
+        sb.append(worker.getValue());
+        sb.append(",");
+      }
+      LOG.info("analyzePartitionStats: [" + sb + "]");
       Collections.sort(workerEntryList, new VertexCountComparator());
       LOG.info("analyzePartitionStats: Vertices - Mean: " +
           (totalVertexEdgeCount.getVertexCount() /
